# mai-architecture

./: CMakeLists.txt  README.md  chat-service.cpp  docker-compose.yaml  post-service.cpp  user-service.cpp
chat-service/: Dockerfile  main.cpp  message.h  message_db.h  message_request_handler.h
common/config/: config.cpp  config.h
common/database/: cache.cpp  cache.h  database.cpp  database.h
common/utils/: auth.h  json.h  request.h
common/web_server/: request_factory.h  web_server.h
mariadb/: Dockerfile
mariadb/main_script/: main_script.sql
mariadb/sequence/: seq.sql
post-service/: Dockerfile  main.cpp  post.h  post_db.h  post_request_handler.h
user-consumer/: main.cpp  main.h  user-service.h
user-service/: Dockerfile  main.cpp  user.h  user_cache.h  user_db.h  user_request_handler.h  user_storage.h
